--- a/MyProject/src/main/webapp/views/index.html
+++ b/MyProject/src/main/webapp/views/index.html
@@ -13,30 +13,14 @@
     <button type="button" class="layui-btn layui-btn-normal" id="upload">选择文件</button>
     <button type="button" class="layui-btn" id="startUpload">开始上传</button>
 </div>
-<div class="layui-progress">
-    <div class="layui-progress-bar" lay-percent="10%"></div>
+
+<div class="layui-progress layui-progress-big" lay-showPercent="yes" lay-filter="progressBar">
+    <div class="layui-progress-bar layui-bg-red" lay-percent="0%"></div>
 </div>
 </body>
 
 <script>
 
-    //创建监听函数
-    var xhrOnProgress=function(fun) {
-        xhrOnProgress.onprogress = fun; //绑定监听
-        //使用闭包实现监听绑
-        return function() {
-            //通过$.ajaxSettings.xhr();获得XMLHttpRequest对象
-            var xhr = $.ajaxSettings.xhr();
-            //判断监听函数是否为函数
-            if (typeof xhrOnProgress.onprogress !== 'function')
-                return xhr;
-            //如果有监听函数并且xhr对象支持绑定时就把监听函数绑定上去
-            if (xhrOnProgress.onprogress && xhr.upload) {
-                xhr.upload.onprogress = xhrOnProgress.onprogress;
-            }
-            return xhr;
-        }
-    }
     layui.use(['upload','element'], function() {
         var $ = layui.jquery
             , upload = layui.upload
@@ -44,13 +28,14 @@
         //选完文件后不自动上传
         upload.render({
             elem: '#upload'
-            , url: '/upload/'
+            , url: '/upload'
             , auto: false
+            ,accept:'file'
             //,multiple: true
             , bindAction: '#startUpload'
-            ,xhr:xhrOnProgress
-            ,progress: function(index,value){//上传进度回调 value进度值
-            element.progress('image'+index, value+'%');//设置页面进度条
+            , progress: function(e , percent) {
+                console.log("进度：" + percent + '%');
+                element.progress('progressBar',percent  + '%');
         }
             , done: function (res) {
                 console.log(res)
