--- a/MyProject/src/main/webapp/views/index.html
+++ b/MyProject/src/main/webapp/views/index.html
@@ -14,7 +14,7 @@
     <button type="button" class="layui-btn" id="startUpload">开始上传</button>
 </div>
 
-<div class="layui-progress layui-progress-big" lay-showPercent="yes" lay-filter="progressBar">
+<div class="layui-progress layui-progress-bar" lay-showPercent="yes" lay-filter="progressBar">
     <div class="layui-progress-bar layui-bg-red" lay-percent="0%"></div>
 </div>
 </body>
@@ -38,7 +38,7 @@
                 element.progress('progressBar',percent  + '%');
         }
             , done: function (res) {
-                console.log(res)
+                console.log(res.msg)
             }
         });
 
