--- a/MyProject/src/main/webapp/views/index.html
+++ b/MyProject/src/main/webapp/views/index.html
@@ -24,11 +24,12 @@
             <label class="layui-form-label">选择框</label>
             <div class="layui-input-block">
                 <select name="city" lay-verify="required" id="select">
-                    <option value=""></option>
+                    <option value="">请选择</option>
 
                 </select>
             </div>
     <a class="layui-btn layui-btn-small" id="" onclick="">确定</a>
+        </div>
 </form>
 
 </body>
@@ -54,12 +55,13 @@
         }
             , done: function (res) {
                 options = '';
-               for(option in res){
-                   options += "<option class='' value='" + res + "'>" + res + "</option>";
-
-               }
+                for (let i = 0; i <res.length ; i++) {
+                    options += "<option class='' value='" + res[i] + "'>" + res[i] + "</option>";
+                }
                console.log(options)
                $('#select').append(options)
+
+                form.render();
             }
         });
 
