--- a/MyProject/src/main/webapp/views/index.html
+++ b/MyProject/src/main/webapp/views/index.html
@@ -20,7 +20,7 @@
         <input class="layui-input" id="fileInput">
         <div class="button-group">
         <button  type="button" class="layui-btn" id="upload">浏览</button>
-        <button class="layui-btn upload-button" id="startUpload">上传</button>
+        <button  type="button" class="layui-btn upload-button" id="startUpload">上传</button>
         </div>
     </form>
 </div>
@@ -28,9 +28,9 @@
 <div class="layui-container  container">
     <div class="layui-tab">
         <ul class="layui-tab-title">
-            <li class="show">sheet1</li>
-            <li>sheet2</li>
-            <li>sheet3</li>
+            <li class="show" id="tab1">sheet1</li>
+            <li id="tab2">sheet2</li>
+            <li id="tab3">sheet3</li>
 
         </ul>
         <div class="layui-tab-content ">
@@ -44,7 +44,7 @@
                 <input class="layui-input-block" id="input-sheet1" >
                 <br>
                 <br>
-                <button class="layui-btn" onclick="downloadZip(1)">确认下载</button>
+                <button type="button" class="layui-btn" onclick="downloadZip(1)">确认下载</button>
             </div>
             <div class="layui-tab-item">
                 <label for="select-sheet2">选择拆分列</label>
@@ -56,7 +56,7 @@
                 <input class="layui-input-block" id="input-sheet2" >
                 <br>
                 <br>
-                <button class="layui-btn" onclick="downloadZip(2)">确认下载</button>
+                <button type="button" class="layui-btn" onclick="downloadZip(2)">确认下载</button>
             </div>
             <div class="layui-tab-item">
                 <label for="select-sheet3">选择拆分列</label>
@@ -68,7 +68,7 @@
                 <input class="layui-input-block" id="input-sheet3" >
                 <br>
                 <br>
-                <button class="layui-btn" onclick="downloadZip(3)">确认下载</button>
+                <button  type="button" class="layui-btn" onclick="downloadZip(3)">确认下载</button>
             </div>
 
          </div>
@@ -77,6 +77,7 @@
 
 
 </body>
+<script src="/assets/jquery.min-v1.11.3.js"></script>
 <script src="/assets/layui/layui.js"></script>
 <script src="/assets/index.js"></script>
 
